# otus-rust-course

./: .gitignore  .gitlab-ci.yml  README.md
projects/hw-008/: Cargo.toml  README.md  run_server.sh
projects/hw-008/examples/: lib.rs
projects/hw-008/src/: main.rs
projects/hw-008/src/cli/: args.rs  command_handler.rs  mod.rs
projects/hw-008/src/client/: app.rs  clients.rs  commands.rs  main.rs  terminal_gui.rs  tui_example.rs  tui_example_table.rs  tui_example_tabs.rs  tui_gui.rs
projects/hw-008/src/entities/: mod.rs  reportable.rs
projects/hw-008/src/entities/devices/: device.rs  mod.rs  socket.rs  thermometer.rs
projects/hw-008/src/entities/house/: home.rs  mod.rs  room.rs
projects/hw-008/src/entities/manager/: create_functions.rs  find_functions.rs  mod.rs  remove_functions.rs  smart_home.rs  update_functions.rs
projects/hw-008/src/server/: main.rs  mod.rs  tcp_server.rs  udp_server.rs
projects/hw-008/src/server/tcp/: session.rs  tcp_server.rs
projects/hw-008/src/server/udp/: mod.rs  udp_server.rs
projects/hw-008/tests/: dummy_integration_test.rs
projects/torrentino/: Cargo.toml  README.md
projects/torrentino/src/: lib.rs  main.rs
projects/torrentino/src/cli/: cli.rs  cli_args.rs  mod.rs
projects/torrentino/src/engine/: torrent_engine.rs
projects/torrentino/src/protocol/: mod.rs
projects/torrentino/src/protocol/entities/: mod.rs  torrent.rs  torrent_info.rs  (+1 more)
projects/torrentino/tests/: display_torrent_file.rs  download_torrent_file.rs  make_announce_request.rs  obtain_connection_id.rs  parse_torrent_file.rs  test_cli.rs
(+119 files in other folders)
