[package]
name = "torrentino"
edition = "2021"
version = "0.0.1"
description = "A blazingly fast torrent client"
authors = ["Almaz Murzabekov @ et al"]

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
clap = { version = "4.0.29", features = ["derive"] }
url = "2.3.1"
rand = "0.8.5"
byteorder = "1.4.3"
bincode = "1.3.3"
tokio = { version = "1.6.1", features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "macros"] }
chrono = "0.4.23"
futures = "0.3"
sha-1 = "0.9"
